增加了feeling文件夹

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
-    <script>
+<!--    <script>-->
 
-        $(function () {
-            $("#footer").load("footer.html");$("#side-bar-right").load("side-bar-right.html"); $("#content-down").load("content-down.html"); $("#content-up").load("content-up.html");
-        });
-    </script>
+<!--        $(function () {-->
+<!--            $("#footer").load("footer.html");$("#side-bar-right").load("side-bar-right.html");-->
+<!--            $("#content-down").load("content-down.html"); $("#content-up").load("content-up.html");-->
+<!--        });-->
+<!--    </script>-->
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -122,10 +123,6 @@
 
                 <p>&nbsp;</p>
                 <hr>
-
-
-
-
 
             </div>
         </div>
