--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <a class="list-group-item " href="linux-filesystem.html"><span class="fa fa-square"></span>&nbsp;Linux filesystem</a>
                     <a class="list-group-item" href="gnu-linux-filesystem-structure.html"><span class="fa fa-square"></span>&nbsp;GNU / Linux filesystem structure</a>
                     <a class="list-group-item" href="shells-and-file-handling.html"><span class="fa fa-square"></span>&nbsp;Command line interpreters</a>
+                    <a class="list-group-item active" href="ls-command.html"><span class="fa fa-square"></span>&nbsp;ls command</a>
+                    <a class="list-group-item" href="feeling/test.html"><span class="fa fa-square"></span>&nbsp;Test</a>
+
                 </div>
             </div>
         </div>
