--- a/feeling/2021-6-19.html
+++ b/feeling/2021-6-19.html
@@ -17,6 +17,12 @@
 <body>
 <h1>欢迎来到 DARK HORSE 之家</h1>
 
+<!--音乐播放器-->
+<link rel="stylesheet" href="../css/APlayer.min.css">
+<div id="aplayer"></div>
+<script src="../js/APlayer.min.js"></script>
+
+
 <div class="row">
         <div class="col-sm-2">
             <div class="list-group">
@@ -33,6 +39,8 @@
         </div>
 </div>
 <img src="../img/bk.jpg" height="281" width="499"/>
+
+
 
 </body>
 </html>
