--- a/feeling/test.html
+++ b/feeling/test.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h1>测试一下能不能跳转</h1>
+
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=116869&auto=1&height=66"></iframe>
+
 </body>
 </html>
